added the owner id and updated the get api to get the functionhalls based on the user param