@@ -3,8 +3,10 @@ package com.pellipandiri.userservice.service;
 
 import com.pellipandiri.userservice.ExceptionHandler.FunctionNameNotFound;
 import com.pellipandiri.userservice.ExceptionHandler.UserRequestException;
+import com.pellipandiri.userservice.dto.FunctionHallDTO;
 import com.pellipandiri.userservice.entities.Address;
 import com.pellipandiri.userservice.entities.FunctionHalls;
+import com.pellipandiri.userservice.mapper.FunctionHallMapper;
 import com.pellipandiri.userservice.model.UserRequest;
 import com.pellipandiri.userservice.repository.AddressRepository;
 import com.pellipandiri.userservice.repository.FunctionHallsRepository;
@@ -28,23 +30,24 @@ public class UserService {
     }
 
 
-    public List<FunctionHalls> getFunctionHalls(UserRequest userRequest) throws UserRequestException,FunctionNameNotFound {
-        if(userRequest==null){
-            throw new UserRequestException("UserRequest is empty");
+    public List<FunctionHallDTO> getFunctionHalls(String city, String functionHall, String location) throws UserRequestException,FunctionNameNotFound {
+        if(city!=null){
+            return addressRepository
+                    .findAllByCity(city.toLowerCase()).
+                    stream().map(Address::getFunctionHalls).map(FunctionHallMapper::toDTO).collect(Collectors.toList());
         }
-        if(userRequest.getFunctionName() == null){
+        else if(functionHall != null){
+
+            return List.of(functionalHallsRepository.
+                    findByFunctionHallsName(functionHall.toLowerCase()).
+                    orElseThrow(()->new FunctionNameNotFound("Function Name not Found"))).
+                    stream().map(FunctionHallMapper::toDTO).toList();
+        }else if(location!=null){
             // search based on the latitude
             // returing all the function halls win future need to send based on the radius
-
-            return functionalHallsRepository.findAll();
-        }else if(userRequest.getCity()!=null){
-            return addressRepository
-                    .findAllByCity(userRequest.getCity().toLowerCase()).
-                    stream().map(Address::getFunctionHalls).collect(Collectors.toList());
+                return functionalHallsRepository.findAll().stream().map(FunctionHallMapper::toDTO).toList();
         }else{
-            return List.of(functionalHallsRepository.
-                    findByFunctionHallsName(userRequest.getFunctionName()).
-                    orElseThrow(()->new FunctionNameNotFound("Function Name not Found")));
+            return functionalHallsRepository.findAll().stream().map(FunctionHallMapper::toDTO).toList();
         }
 
 
